manifests/hello/deploy-helloworld.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld
  namespace: hello
spec:
  selector:
    matchLabels:
      app: helloworld
  replicas: 1
  template:
    metadata:
      labels:
        app: helloworld
        app.kubernetes.io/name: helloworld
    spec:
      containers:
        - name: helloworld
          image: nginx:1.28.0-alpine3.21
          ports:
            - containerPort: 80
