manifests/hello/ingressroute-helloworld.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: helloworld
  namespace: hello
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: <HELLO_MATCH>
      middlewares:
        - name: fail2ban-hello
          namespace: hello
      services:
        - name: helloworld
          port: 80
  tls:
    secretName: domain-tls
